@@ -1,8 +1,8 @@
-all: heap terrain poke 
+all: 
+	gcc *.c -Wall -Werror -c 
 
 poke: poke.c
 	gcc poke.c -Wall -Werror -c
-	gcc -o poke poke.o terrain.o heap.o
 
 terrain: terrain.c
 	gcc terrain.c -Wall -Werror -c
@@ -13,8 +13,10 @@ heap: heap.c
 distanceMap: distanceMap.c
 	gcc distanceMap.c -Wall -Werror -c
 
-link:
+linkDebug:
 	gcc -ggdb -o run *.o
 
+link:
+	gcc -o run *.o
 clean:
 	rm -f *.exe *.stackdump core *.o
