@@ -2,3 +2,6 @@ Create a map for the Pokemon game. The map size is 80 wide and 21 tall. There ar
 
 
 Can now traverse through different maps by typing e, w, n, s, or f x y. The overall size of the map is 399 by 399. Each containing its own unique map that lines up its exits with the corresponding exit of adjacent maps. Furthermore, the spawn rate of poke centers and marts now is based on a probability lowering as one moves away from the center of the map. Additionally, centers and marts now spawn more randomly within a given map terrain. When on the edge of the overall map, exits will not spawn going out of bounds. Lastly, one can not move the map position out of legal bounds. If w is entered when on the west edge of the map, map does not change and reprints the current map. Flying must be put in the format f, 1, 1 to fly to (1,1)
+
+
+Now features distance cost map for two trainers, hikers and rivals. Currently, prints both distance maps before the current map. Still can move around in the overall world using the same controls as specified above. The heap is credited to the professor. I had attempted to crate my own heap; however after running into too many walls and the due date approaching, I resorted to using the professor's code. Slight, edits were made to the heap.c and heap.h files to give access to different fields of a the heap_node. No major changes were made only moved heap_node from being declared in the .c file to the .h file. Distance were all %100 to return down to 2 digits; therefore, the distance values will print 00 again once they have reached a multiple of 100;
