@@ -5,20 +5,13 @@
 #include "terrain.h"
 #include <stdbool.h>
 #include <time.h>
+#include "distanceMap.h"
 
+// inf value used to avoid overflow arithmetic with INT_MAX
 #define inf 10000
 
 
-typedef struct heap_node {
-  heap_node_t *next;
-  heap_node_t *prev;
-  heap_node_t *parent;
-  heap_node_t *child;
-  void *datum;
-  uint32_t degree;
-  uint32_t mark;
-}heap_node_t;
-
+// Compare function to compare the key arr{cost, x, y} by getting the difference in cost
 int32_t compare(const void *key, const void *with)
 {
 
@@ -29,40 +22,39 @@ int32_t compare(const void *key, const void *with)
 }
 
 
-enum trainers{
-	pc = 0,
-	r = 0,
-	h = 5
-};
-
-
+// Returns the tile cost of a given position
 int get_tile_cost(int x, int y, map_t *m, enum trainers trainer){
+	// Gets the tile from map
 	enum terrain_type tile = m->map_grid[y][x];
-	if(tile == path || tile == exitMap){
+	// If the tile is path (path or exitMap) or a clearing return cost of 10
+	if(tile == path || tile == exitMap || tile == clearing){
 		return 10;
 	}
-	else if(tile == clearing){
-		return 10;
-	}
+	// If the tile is tall grass return cost of 20
 	else if(tile == tall_grass)
 	{
 		return 20 - trainer;
 	}
+	// If the tile is sand return cost of 15
 	else if(tile == sand){
 		return 15;
 	}
+	// If the tile is a rock grass return cost of 25
 	else if(tile == rock){
 		return 25;
 	}
+	// If the tile is a center or mart and the trainer is the player than return cost of 10
 	if(tile == center || tile == mart){
 		if(trainer == pc){
 			return 10;
 		}
 	}
+	// Else return inf value
 	return inf;
 
 }
 
+// Updates the cost of a cell (key) if it is cheap to move from the current tile than a previous one
 void update_cost(heap_t *h, map_t *m, heap_node_t *dis_map[21][80], int neighbors_x, int neighbors_y, int current_cost,
 									int current_x, int current_y, enum trainers trainer){
 
@@ -74,7 +66,7 @@ void update_cost(heap_t *h, map_t *m, heap_node_t *dis_map[21][80], int neighbor
 	// Getting the from the current tile plus the movement cost
 	int from_current_cost = current_cost + get_tile_cost(current_x, current_y, m, trainer);
 
-
+	// Compares the cost of the neighbor and the current tile, and updates if from current tile is cheaper
 	if(neighbors_cost > from_current_cost){
 		int* cost;
 		cost = malloc(3*sizeof(int));
@@ -86,6 +78,7 @@ void update_cost(heap_t *h, map_t *m, heap_node_t *dis_map[21][80], int neighbor
 
 }
 
+// Returns and array containing all possible neighbor positions. DOES NOT check if the neighbor is in bounds
 void set_neighbors_arr(int arr[8][2], int x, int y){
 	// North West Neighbor
 	arr[0][0] = x - 1; 
@@ -113,7 +106,7 @@ void set_neighbors_arr(int arr[8][2], int x, int y){
 	arr[7][1] = y + 1;
 }
 
-
+// Checks if the given coordinates are within map bounds
 bool is_in_bounds(int x, int y){
 	if(x > 79 || x < 0){
 		return false;
@@ -124,10 +117,13 @@ bool is_in_bounds(int x, int y){
 	return true;
 }
 
-void shortest_path(int col, int row, heap_node_t *dis_map[21][80], map_t *m, enum trainers trainer, int dis[21][80]){
+// Finds the shortest path from the given position, row, col, for a given trainer
+void shortest_path(int row, int col, heap_node_t *dis_map[21][80], map_t *m, enum trainers trainer, int dis[21][80]){
+	// Sets up cost int array and heap
 	int *cost;
 	heap_t h;
 	heap_init(&h, compare, free);
+
 	// Initializing distance map to infinity and inserting into heap
 	for(int i = 0; i < 80; i++){
 		for(int j = 0; j < 21; j++){
@@ -139,17 +135,20 @@ void shortest_path(int col, int row, heap_node_t *dis_map[21][80], map_t *m, enu
 		}
 	}
 
+	// Updates the starting node to a cost of 0
 	cost = malloc(3*sizeof(int));
 	cost[0] = 0;
 	cost[1] = row;
 	cost[2] = col;
 	heap_decrease_key(&h, dis_map[col][row], cost);
 
-
-
+	// Creates a void pointer to take in the return value of the heap
 	void *n;
+	// Values of the returned nodes position and cost
 	int current_cost, current_row, current_col;
+	// Array to store neighbor positions
 	int arr[8][2];
+	// While the heap is not empty, update all neighbor costs, of the current node (lowest distance node)
 	while(h.size > 0){
 		// Getting the current nodes information
 		n = heap_peek_min(&h);
@@ -160,62 +159,73 @@ void shortest_path(int col, int row, heap_node_t *dis_map[21][80], map_t *m, enu
 		// Getting all the possible neighbors of current node
 		set_neighbors_arr(arr, current_row, current_col);
 
-		// For each neighbor in bounds, update the cost
+		// For each neighbor in bounds and not NULL, update the cost
 		for (int neighbor = 0; neighbor < 8; neighbor++) {
 			if(is_in_bounds(arr[neighbor][0], arr[neighbor][1]) && dis_map[arr[neighbor][1]][arr[neighbor][0]] != NULL){
 				update_cost(&h, m, dis_map, arr[neighbor][0], arr[neighbor][1], current_cost, current_row, current_col, trainer);
 			}
 		}
+		// Remove the smallest node from the heap
 		heap_remove_min(&h);
+		// Move the cost from the heap node array to the final distance cost array map
 		dis[current_col][current_row] = current_cost;
+		// Sets the current heap node in heap node array to NULL to not recheck during future cost updates
 		dis_map[current_col][current_row] = NULL;
 	}
-
 }
 
-
-void print_dis_map(int map[21][80]){
-	// Prints distance map with room for a four digit number
+// Replaces cells on the distance map containing non-valid locations to INT_MAX
+void replace_with_inf(map_t *map, int m[21][80]){
 	for(int i = 0; i < 21; i++){
 		for(int j = 0; j < 80; j++){
-			printf("%d, ", map[i][j]%100);
+			if(map->map_grid[i][j] == boulders || map->map_grid[i][j] == tree || map->map_grid[i][j] == center || map->map_grid[i][j] == mart){
+				m[i][j] = INT_MAX;
+			}
+		}
+	}
+}
+
+// Prints the given integer distance map
+void print_dis_map(int map[21][80]){
+	// Prints distance map with room for a 2 digit number and spaces for invalid locations
+	for(int i = 0; i < 21; i++){
+		for(int j = 0; j < 80; j++){
+			if(map[i][j] > 1600){
+				printf("   ");
+			}
+			else {
+				printf("%02d ", map[i][j]%100);
+			}	
 		}
 		printf("\n");
 	}
 }
 
+// Prints a 5 by 5 area of the distance map around the given coordinates. DOES NOT check for in bounds of 5 by 5 area
 void print_dis_map_5by5(int map[21][80], int x, int y){
-	for (int i = y - 2; i < y + 2; i++)
+	for (int i = y - 2; i < y + 3; i++)
 	{
-		for (int j = x - 2; j < x + 2; j++)
+		for (int j = x - 2; j < x + 3; j++)
 		{
-			printf("%d, ", map[i][j]);		
+			if(map[i][j] > 1600){
+				printf("   ");
+			}
+			else {
+				printf("%02d ", map[i][j]%100);
+			}		
 		}
 		printf("\n");
 	}
 }
 
+// Main function to update a given distance map for the given trainer
+void create_dis_map(int playerx, int playery, int arr[21][80], enum trainers trainer, map_t *map){	
+	// Creates a heap node array used in shortest path
+	heap_node_t *node_distance[21][80];
 
+	// Calculates the shortest path
+	shortest_path(map->playerx, map->playery, node_distance, map, trainer, arr);
 
-
-
-int main(int argc, char const *argv[])
-{	
-	heap_node_t *hiker_dis[21][80];
-	int h_dis[21][80];
-	map_t map;
-	init_map(&map);
-	generate_remaining_exits_rand(&map);
-	generate_paths(&map);
-	generate_poke_centers(&map, 100);
-
-	map.playerx = 15;
-	map.playery = 15;
-	printMap(&map);
-
-	shortest_path(15, 15, hiker_dis, &map, h, h_dis);
-	// print_dis_map(h_dis);
-	print_dis_map_5by5(h_dis, 15, 15);
-
-	return 0;
+	// Replaces the invalid locations with INT_MAX values
+	replace_with_inf(map, arr);
 }
