@@ -5,16 +5,6 @@
 
 #include "heap.h"
 
-struct heap_node {
-  heap_node_t *next;
-  heap_node_t *prev;
-  heap_node_t *parent;
-  heap_node_t *child;
-  void *datum;
-  uint32_t degree;
-  uint32_t mark;
-};
-
 #define swap(a, b) ({    \
   typeof (a) _tmp = (a); \
   (a) = (b);             \
